--- a/blog/templates/paginas/home.html
+++ b/blog/templates/paginas/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {%block 'titulo'%}
-    <title>HOME</title>
+    <title>Home</title>
 {%endblock%}
 
 {%block 'style'%}
@@ -31,6 +31,10 @@
             <p>Olá, me chamo André Prasel e tenho 21 anos. Sou estudante de 
                 Engenharia Elétrica na UTFPR, apaixonado por tecnologia e adoro
                 aprender coisas novas. 
+            </p>
+            <p>Em meu tempo livre gosto de jogar jogos eletrônicos ou assistir um bom filme 
+                (ficção científica são meus preferidos). Leitura também é um de meus hobbies e 
+                aqueles de suspense lideram a lista de categorias que gosto.
             </p>
         </div>
     </div>
