--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="shortcut icon" href="{% static 'img/home/logo.png' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static '/css/menu_horizontal.css'}">
     {%block 'titulo'%}{%endblock%}
     {%block 'style'%}{%endblock%}
